@@ -4,10 +4,6 @@
 #
 # This file is a good starting point for using the JBE under Windows and Cygwin.
 
-# The default directory for Cygwin tools.
-
-TOOLS_DIR := C:/cygwin/bin
-
 # Standard directories for Sun JDKs.  Because
 # we don't specify SITE_JDK_VENDOR or SITE_JDK_RELEASE, projects
 # will compile using Sun's JDK 1.3 unless overriden locally.
